<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/my_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="48dp"
        android:text="@string/my_account"
        android:textSize="50sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_account"
        android:layout_marginTop="190dp"
        android:backgroundTint="#FFFCFC"
        android:elevation="8dp"
        android:foregroundGravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:padding="16dp"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="335dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/email"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/login_Passward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textStyle="bold" />


            <Button
                android:id="@+id/signIn"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button_style"
                android:backgroundTint="@color/black"
                android:text="@string/sign_in"
                android:textStyle="bold"
                android:textSize="15dp"
                android:textColor="@color/white" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/do_not_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_below="@id/cardView"
        android:textStyle="bold"
        android:text="@string/do_not_have_an_acccount" />
</RelativeLayout>
